--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/express": "^5.0.0",
+    "express": "^4.21.2",
     "heap-js": "^2.5.0",
     "moment": "^2.30.1"
   }
